# armadillo-ui

./: .analysis_options  .gitignore  BUILD.gn  FLUTTER_VERSION  HACKING.md  Makefile  README.md  filetypes.xml  find.xml  jdk.table.xml  project.default.xml
_windows/: applicationLibraries.xml  path.macros.xml
armadillo/: BUILD.gn  building.md  flutter.yaml  pubspec.yaml
armadillo/android/: AndroidManifest.xml
armadillo/android/app/src/main/: AndroidManifest.xml
armadillo/ios/Runner/: Info.plist
armadillo/ios/Runner.xcodeproj/: project.pbxproj
armadillo/lib/: armadillo.dart  armadillo_drag_target.dart  armadillo_overlay.dart  candidate_info.dart  carousel.dart  child_constraints_changer.dart  cluster_layout.dart  conductor.dart  config_manager.dart  constraints_manager.dart  constraints_model.dart  debug_enabler.dart  debug_model.dart  default_scroll_configuration.dart  device_extender.dart  drag_direction.dart  edge_scroll_drag_target.dart  expand_suggestion.dart  fading_spring_simulation.dart  fake_story.dart  focusable_story.dart  important_info.dart  json_story_generator.dart  json_suggestion_manager.dart  json_suggestion_model.dart  kenichi_edge_scrolling.dart  keyboard_device_extension.dart  line_segment.dart  long_hover_detector.dart  long_press_gesture_detector.dart  main.dart  model.dart  nothing.dart  now.dart  now_manager.dart  now_minimized_info_fader.dart  now_model.dart  opacity_manager.dart  opacity_model.dart  optional_wrapper.dart  (+72 more)
armadillo/lib/res/: initial_story_generator_config.json  initial_story_generator_config.json.example  screen_config.json  stories.json
armadillo/test/: BUILD.gn  armadillo_drag_target_test.dart  candidate_info_test.dart  constraints_manager_test.dart  constraints_model_test.dart  fading_spring_simulation_test.dart  now_minimized_info_fader_test.dart  panel_test.dart  recent_list_test.dart  story_list_layout_test.dart  story_list_test.dart
armadillo_user_shell/: BUILD.gn  flutter.yaml
armadillo_user_shell/lib/: res  (+14 more)
capybara_user_shell/: BUILD.gn  pubspec.yaml
docs/: dev_setup.md  performance.md  profiling.patch  setup.md  sync_flutter.md
interfaces/: BUILD.gn  dummy.mojom  pubspec.yaml
keyboard/: BUILD.gn  pubspec.yaml
tools/: environment.sh  install_flutter.sh  jiri_commands.sh  run_dart_tests.sh
widgets/: BUILD.gn  pubspec.yaml
widgets/lib/: aggregate_listener_animation.dart  blinking_cursor.dart  bottom_aligned_overlay_state.dart  default_bundle.dart  delegating_page_route.dart  device_extension_state.dart  icon_slider.dart  key_mappings.dart  quadrilateral_painter.dart  raw_keyboard_input.dart  rk4_spring_simulation.dart  scrollable_input_text.dart  three_column_aligned_layout_delegate.dart  ticking_height_state.dart  ticking_state.dart
widgets/test/: BUILD.gn  aggregate_listener_animation_test.dart  rk4_spring_simulation_test.dart
(+35 files in other folders)
