# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("sysui") {
  deps = [
    "//apps/sysui/armadillo_user_shell",
    "//apps/sysui/userpicker_device_shell",
  ]
}

group("test") {
  testonly = true

  deps = [
    "//apps/sysui/armadillo/test",
    "//apps/sysui/keyboard/test",
    "//apps/sysui/widgets/test",
  ]
}
