# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_package.gni")

dart_package("armadillo") {
  package_name = "armadillo"

  source_dir = "lib"

  analysis_options="//apps/sysui/.analysis_options"

  deps = [
    "//apps/modules/common/packages/models",
    "//apps/modules/email/modules/story:email_story",
    "//apps/sysui/keyboard",
    "//apps/sysui/widgets",
    "//lib/flutter/packages/flutter",
  ]
}
