# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_package.gni")

dart_package("widgets") {
  package_name = "sysui_widgets"

  source_dir = "lib"

  deps = [
    "//lib/flutter/packages/flutter",
  ]

  analysis_options = "//apps/sysui/.analysis_options"
}
