# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_test.gni")

dart_test("test") {
  source_dir = "."

  deps = [
    "//apps/sysui/widgets",
    "//lib/flutter/packages/flutter_test",
    "//third_party/dart-pkg/pub/test",
  ]
}
